<resources>
    <!--    Login-->
    <string name="app_name">Final Project</string>
    <string name="text_login">Login</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Pass word</string>
    <string name="button_login">Login</string>
    <string name="text_account_yet">Not have account yet? <u>Sign up</u></string>

    <!--    Register-->
    <string name="text_signup">Sign up</string>
    <string name="hint_name">Full name</string>
    <string name="hint_phonenumbers">Phone numbers</string>
    <string name="hint_confirmpass">input password again</string>
    <string name="button_register">Register</string>
    <string name="text_gotologin">Already have an account. <u>Sign in now</u></string>

    <string name="text_search_icon">Search</string>
    <string name="text_ticket_icon">My ticket</string>
    <string name="text_account_icon">My account</string>

    <string name="text_sign_in"> <u>Sign in</u> </string>
    <string name="text_slogan">Guarantee 150% refund if transport service is not provided</string>

    <string name="hint_start_point">Start point</string>
    <string name="hint_end_point">Where to?</string>
    <string name="hint_date">Departure date</string>

    <string name="text_search_tickets">Search tickets</string>

    <string name="tex_confirm">Confirm</string>

    <string name="route_name">Hà Nội - Hồ Chí Minh</string>
    <string name="date_route">T2, 16/04/2023</string>
    <string name="date_ticket">19:00    T2, 16/04/2023</string>

    <string name="text_title_fill">Thông tin khách hàng</string>

</resources>