<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <RelativeLayout
        android:id="@+id/rlt_header"
        android:layout_margin="@dimen/margin_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/mainLogo"
            android:background="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:gravity="center_vertical"
            android:textSize="@dimen/text_content_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sign_in"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/mainLogo"
            android:layout_alignBottom="@+id/mainLogo"
            android:textColor="@color/maincolor2"
            />

        <TextView
            android:layout_marginTop="@dimen/margin_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_slogan"
            android:theme="@style/txt_slogan"
            android:layout_below="@+id/mainLogo"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearlayoutSearchfunction"
        android:layout_marginTop="@dimen/margin_basex2"
        android:layout_marginLeft="@dimen/margin_base"
        android:layout_marginRight="@dimen/margin_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlt_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_shape"
            android:orientation="vertical"
            >

            <TextView
                android:padding="@dimen/basic_radius"
                android:theme="@style/edt_view"
                android:id="@+id/textViewStartPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_start_point"
                android:drawableLeft="@drawable/point_start"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                android:layout_marginLeft="@dimen/margin_base"
                android:layout_marginRight="@dimen/margin_base"
                />

            <TextView
                android:padding="@dimen/basic_radius"
                android:theme="@style/edt_view"
                android:id="@+id/textViewEndPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_end_point"
                android:drawableLeft="@drawable/point_end"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                android:layout_marginLeft="@dimen/margin_base"
                android:layout_marginRight="@dimen/margin_base"
                />

            <TextView
                android:padding="@dimen/basic_radius"
                android:theme="@style/edt_view"
                android:id="@+id/textViewDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_date"
                android:drawableLeft="@drawable/date"/>
        </LinearLayout>
        <Button
            android:id="@+id/buttonSearchTickets"
            android:backgroundTint="@color/maincolor1"
            android:layout_marginTop="@dimen/margin_base"
            android:background="@drawable/buttonshape"
            android:textSize="@dimen/text_content_size"
            android:text="@string/text_search_tickets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_marginLeft="@dimen/margin_base"
        android:layout_marginTop="@dimen/margin_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearlayoutSearchfunction"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycleviewContain" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>